[package]
name = "converge"
version = "0.1.0"
edition = "2021"

[dependencies]
svg = "0.13.1"
rand = "0.8.5"
rayon = "1.7.0"
resvg = "0.42.0"
usvg = "0.28.0"
tiny-skia = "0.8.2"
eframe = "0.28.1"
plotters = "0.3.1"
egui = "0.28.1"
egui_plot = "0.28.1"
rand_distr = "0.4.0"
palette = { version = "0.6", features = ["named"] }
dssim-core = "3.2.10"
image = "0.24.9"
imageproc = "0.23.0"
image-compare = "0.3.1"
